# ProjB

./: index.html  index.js  package.json  tsconfig.json  vercel.json
api/: handler.ts  helper1.ts  helper2.ts  index.js  package.json  types.ts  utils.ts
native/cpp-addon/: addon.cpp  binding.gyp  package.json
native/rust-validator/src/: Cargo.toml  rust_validator.rs
native/rust-validator/src/src/: lib.rs
public/: index.html  styles.css
