[package]
name = "rust_validator"
version = "0.1.0"
edition = "2021"
description = "Rust-based N-API addon for Facebook Account Validator"
license = "MIT"
repository = "https://github.com/Aasyaco/ProjB"
keywords = ["napi", "node", "ffi", "rust", "validator"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
chrono = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
